@@ -7,4 +7,25 @@ struct DomainsDashboardFactory {
         viewController.extendedLayoutIncludesOpaqueBars = true
         return viewController
     }
+
+    static func makeDomainsSuggestionViewController(blog: Blog, domainType: DomainType, onDismiss: @escaping () -> Void) -> RegisterDomainSuggestionsViewController {
+        let viewController = RegisterDomainSuggestionsViewController.instance(
+            site: blog,
+            domainType: domainType,
+            includeSupportButton: false)
+
+        viewController.domainPurchasedCallback = { domain in
+            let blogService = BlogService(coreDataStack: ContextManager.shared)
+            blogService.syncBlogAndAllMetadata(blog) { }
+            WPAnalytics.track(.domainCreditRedemptionSuccess)
+            let controller = DomainCreditRedemptionSuccessViewController(domain: domain) { _ in
+                viewController.dismiss(animated: true) {
+                    onDismiss()
+                }
+            }
+            viewController.present(controller, animated: true)
+        }
+
+        return viewController
+    }
 }
